Tweaking some sections.

--- a/paper/cp-types-terms.tex
+++ b/paper/cp-types-terms.tex
@@ -13,9 +13,9 @@
           & \alt & \tp{? A} & \key{client request}\\
           & \alt & \tp{\exists X . B} & \key{output a type}\\
           & \alt & \tp{\forall X . B} & \key{input a type}\\
-          & \alt & \tp{1} & \key{unit for $\otimes$}\\
+          & \alt & \tp{\1} & \key{unit for $\otimes$}\\
           & \alt & \tp{\bot} & \key{unit for $\parr$}\\
-          & \alt & \tp{0} & \key{unit for $\oplus$}\\
+          & \alt & \tp{\0} & \key{unit for $\oplus$}\\
           & \alt & \tp{\top} & \key{unit for $\with$}
   \end{array}
   \qquad
