--- a/paper/futurework.tex
+++ b/paper/futurework.tex
@@ -1,44 +1,45 @@
 \section{Future Work}
 
 \textbf{CP-GV system.} The issues regarding cut elimination suggest there
-should be greater study into calculi based on the sequent calculus. It is
-unclear to what extent process calculi such as CP and lambda calculi can be
+should be greater study of calculi based on the sequent calculus. It is
+unclear to what extent process calculi such as CP and $\lambda$ calculi can be
 unified to use the same framework or library. The different considerations of
-sequent and process calculi perhaps mandate a different library or
-framework. It would be interesting to consider CP in the setting described by
-\citeauthor{Tews:2013,Dawson:2010,Dawson:2002}, where explicit representation
-is given to derivations. The aim here would be to make progress in proving the
-cut elimination theorem for CP, but it is unclear how linearity and
-permutation of environments would be handled in this setting. Otherwise,
+sequent and process calculi perhaps mandate a different approach for each. It
+would be interesting to consider CP in the setting described by
+\citeauthor{Tews:2013} and \citeauthor{Dawson:2010}, where explicit
+representation is given to derivations. The aim here would be to make progress
+on proving the cut elimination theorem for CP, but it is unclear how linearity
+and permutation of environments would be handled in this setting. Otherwise,
 defining an appropriate termination measure for the current version of CP may
 be possible, though it remains unclear how to obtain the desired relationship
 between subprocesses of cut (as explained in \S~\ref{sec:cutelim}).
 
 Further progress with the graph relation version of the translation could be
 made in the current setting aiming to limit the duplication discussed
-previously The translation would be substantially affected by the
+previously. The translation would be substantially affected by the
 aforementioned change to CP because the derivations in the conlusions of the
 rules would have to be constructed. In this case, it may be worth
 investigating representing derivations in GV explicitly.
 
 \citeauthor{Lindley:2014:SAP} extend \citeauthor{Wadler:2014}'s work to
-support polymorphism in GV and n-ary branch and choice in CP. Future work is
+support polymorphism in GV and $n$-ary branch and choice in CP. Future work is
 to support these constructs.
 
 \textbf{Beyond Linear.} Most session-based type systems treat channels as
 linear resources which may not be aliased. The ``adoption and focus''
 system~\cite{Fahndrich:2002} provides a notion of aliased access to linear
-resources. The type system requires special language features, e.g. to manage
-capabilities. \citeauthor{Fahndrich:2002} do not provide operational semantics
-or soundness results for the type system. It would be interesting to
-investigate these properties formally in a session type setting. The ``focus''
-rule (and linearity generally) enforces an invariant on the focussed object
-(channel) such that the type is maintained during the focus operation. Such a
-rule would appear to only benefit recursive session types. Indeed, focussing
-on a non-recursive channel would appear pointless because one is prevented
-from communicating across it for the entire scope of the focus. Moreover, it
-would be undesirable to permit modification of a session type without
-guaranteeing exclusive access to the channel since this could lead to invalid
+resources.\todo{say what adopt and focus do} The type system requires special
+language features, e.g. to manage capabilities. \citeauthor{Fahndrich:2002} do
+not provide operational semantics or soundness results for the type system. It
+would be interesting to investigate these properties formally in a session
+type setting. The ``focus'' rule enforces an invariant on the focussed object
+(channel) such that the type is maintained during the focus operation. The
+object may be aliased while it is under a focus operation. Such a rule would
+appear to only benefit recursive session types. Indeed, focussing on a
+non-recursive channel would appear pointless because one is prevented from
+communicating across it for the entire scope of the focus. Moreover, it would
+be undesirable to permit modification of a session type without guaranteeing
+exclusive access to the channel since this could lead to invalid
 communication.
 
 \begin{comment}
