Finalised the first complete draft.

--- a/paper/acknowledgements.tex
+++ b/paper/acknowledgements.tex
@@ -1,7 +1,6 @@
 \\~\\
 {\bf Acknowledgments.} Thanks to Simon Gay, my supervisor, for his advice
-project-related and otherwise; to Philip Wadler for provision of the GV/CP
-figures and discussions on this work; to the other members of the ABCD
-Scotland clan for their comments and suggestions; and to James McKinna for
-suggesting the use of the graph relation ``trick'' and other feedback on this
-work.
+project-related and otherwise; Philip Wadler for provision of the GV/CP
+figures and discussions on this work; the other members of the ABCD Scotland
+clan for their comments and suggestions; and James McKinna for suggesting the
+use of the graph relation ``trick'' and other feedback on this work.
